# client-cli

./: Cargo.toml  README.md  build.rs
proto/: ChatMessage.proto  ZMsg.proto  zmessage.proto
src/: cli.rs  lib.rs
src/config/: config.rs  mod.rs  sub_command.rs
src/keystore/: keystore.rs  mod.rs  sub_command.rs
src/messager/: chat_message.rs  messager.rs  mod.rs  protos.rs  sub_command.rs  websocketConnection.rs  z_messaage.rs
src/proto/: msg.proto
