[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = [ "derive", "cargo" ] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0"
lazy_static = "1.4"
ed25519-dalek = "1"
rand = "0.8.5"
rand_core = "0.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
serde_bytes = "0.11.14"
tokio-tungstenite = "0.21.0"
url = "2.5.0"
bytes = "1.6.0"
blake2 = "0.10.6"
prost = "0.11"
futures = "0.3"
generic-array = "1.0.0"
parking_lot = "0.12.2"

[build-dependencies]
tonic-build = "0.8"